[package]
name = "killswitch_std"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "A thread-safe kill switch using only the standard library"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "time"] }
tokio-test = "0.4.4"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
